DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Molecules/_Image.scss
.neos-nodetypes-textwithimage,
.neos-nodetypes-image {
  display: flex;
  gap: rs($half-spacing, $unit: rem) rs($basic-spacing, $unit: rem);
  flex-direction: column;
  align-items: start;

  figure {
    --background-color: none;
    --color: currentColor;
    background-color: var(--background-color);
    color: var(--color);
    display: flex;
    flex-direction: column;

    img {
      display: block;
    }

    figcaption {
      margin-top: 0.5rem;
    }

    &.image--style {
      padding: 1.5rem 2rem;

      &-thumbnail {
        text-align: center;
        padding: 0;

        img {
          max-height: 300px;
          max-width: 50%;
        }
      }

      &-primary {
        &-20 {
          --background-color: #{brand('primary-20')};
        }

        &-40 {
          --background-color: #{brand('primary-40')};
        }

        &-60 {
          --background-color: #{brand('primary-60')};
          --color: #fff;
        }

        &-80 {
          --background-color: #{brand('primary-80')};
          --color: #fff;
        }
      }

      &-secondary {
        padding: 1rem;

        &-20 {
          --background-color: #{brand('secondary-20')};
        }

        &-40 {
          --background-color: #{brand('secondary-40')};
          --color: #fff;
        }

        &-60 {
          --background-color: #{brand('secondary-60')};
          --color: #fff;
        }

        &-80 {
          --background-color: #{brand('secondary-80')};
          --color: #fff;
        }
      }
    }
  }
}

.neos-alignment-left {
  flex-direction: row;
}

.neos-alignment-center {
  align-items: center;
}

.neos-alignment-right {
  flex-direction: row-reverse;

  figure {
    justify-content: end;
  }
}

img[data-lightbox]:hover {
  cursor: pointer;
}

body.has-lightbox {
  overflow: hidden;
}

